# pyKriging

./: .gitignore  Makefile  README.md  build_lib.py  build_sparks.py  pyproject.toml
docs/: SPARKS_functionality_advantages.pptx
src/libkriging/: 00_compile_lib.bat  gaussian_quadrature.f90  kdtree2_maxidx.f90  kriging.F90  kriging_capi.F90  kriging_capi.f90  kriging_err.f90  kriging_mis.F90  kriging_st.F90  kriging_st_capi.f90  kriging_sva.F90  lapack.f  progress_bar.F90  rotation.f90  solver.f90  utils.F90  variogram.f90  variogram_st.f90
src/pykriging/: __init__.py  _kriging.py  _kriging_st.py  _run_ok_simple.bat  kriging.def
src/sparks/: f90getopt.F90  io.f90  sparks.f90  sparks_default.nml
test_data/: grid2d.csv  walker.csv
tests/: README.md  conftest.py  test_api.py  test_bk.py  test_cokriging.py  test_cross_validation.py  test_ordinary_kriging.py  test_sgsim.py  test_spacetime_kriging.py  test_sva.py  test_variogram.py  test_weight_store.py
tests_py/: README.md  test_kriging_sva.py  test_loadDLL.py  test_ok.py  test_ok_simple.py  test_ok_wrapper.py  test_sgsim_ok.py
